# torch_infra

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
data/: README.md
environments/: Dockerfile  docker-compose.yml  setup.sh
notebooks/: test.ipynb
outputs/: README.md
src/: README.md  import_test.py
tests/: README.md
