[tool.poetry]
name = "ascender"
version = "0.1.0"
description = "Project template for XCCV group of cvpaper.challenge."
license = "MIT"
authors = ["cvpaper.challenge XCCV group"]
maintainers = ["yoshihiro fukuhara <gatheluck@gmail.com>"]
readme = "README.md"
keywords = [
    "ascender",
    "Python",
    "projects",
    "project templates",
    "project directory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Programming Language :: Python",
    "Topic :: Software Development",
]

packages = [
    { include = "src/*.py" },
    { include = "src/**/*.py"},
]

[tool.poetry.dependencies]
python = "^3.10"
jupyter-contrib-nbextensions = "^0.7.0"
wandb = "^0.15.5"
kaggle = "^1.5.16"
pandas = "^2.0.3"
transformers = "^4.31.0"
datasets = "^2.13.1"
torch = "2.0.0"
notebook = "6.1.5"
sentencepiece = "^0.1.99"
accelerate = "^0.21.0"
gradio = "^3.38.0"
setfit = "^0.7.0"
peft = "^0.4.0"
trl = "^0.4.7"
langchain = "^0.0.242"
bitsandbytes = "^0.41.0"
einops = "^0.6.1"
openai = "^0.27.8"
itables = "^1.5.3"
wikipedia-api = "^0.6.0"
plotly = "^5.15.0"
python-dotenv = "^1.0.0"
tiktoken = "^0.4.0"
wikipedia = "^1.4.0"
blingfire = "^0.1.8"
faiss-gpu = "^1.7.2"
nbqa = "^1.7.0"
seaborn = "^0.12.2"
nbdime = "^3.2.1"
nbdev = "^2.3.12"
ipywidgets = "^8.1.1"
optimum = "^1.13.2"
auto-gptq = "^0.4.2"
mypy = "^1.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.10.1"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"
flake8 = "^5.0.0"
mypy = "^1.0.1"
pytest-cov = "^4.0.0"
ipykernel = "^6.26.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.10
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"